syntax = "proto3";

package cloud.v1;

import "v1/cost_types.proto";

// Cost optimization service for recommendations
service CostOptimizerService {
  // Get optimization recommendations
  rpc GetRecommendations(GetRecommendationsRequest) returns (GetRecommendationsResponse) {}

  // Get a specific recommendation
  rpc GetRecommendation(GetRecommendationRequest) returns (GetRecommendationResponse) {}

  // Apply a recommendation
  rpc ApplyRecommendation(ApplyRecommendationRequest) returns (ApplyRecommendationResponse) {}

  // Dismiss a recommendation
  rpc DismissRecommendation(DismissRecommendationRequest) returns (DismissRecommendationResponse) {}

  // Get savings summary
  rpc GetSavingsSummary(GetSavingsSummaryRequest) returns (GetSavingsSummaryResponse) {}

  // Analyze resources for optimization opportunities
  rpc AnalyzeResources(AnalyzeResourcesRequest) returns (AnalyzeResourcesResponse) {}
}

// Recommendation types
enum RecommendationType {
  RECOMMENDATION_TYPE_UNSPECIFIED = 0;
  RIGHTSIZING = 1; // Resize over/under-provisioned resources
  RESERVED_INSTANCE = 2; // Purchase reserved capacity
  SPOT_INSTANCE = 3; // Use spot/preemptible instances
  IDLE_RESOURCE = 4; // Terminate idle resources
  STORAGE_TIER = 5; // Move to cheaper storage tier
  REGION_MIGRATION = 6; // Move to cheaper region
  GENERATION_UPGRADE = 7; // Upgrade to newer generation
  LICENSE_OPTIMIZATION = 8; // Optimize licensing costs
  CROSS_CLOUD_MIGRATION = 9; // Move workload to another provider
}

// Recommendation priority
enum RecommendationPriority {
  RECOMMENDATION_PRIORITY_UNSPECIFIED = 0;
  RECOMMENDATION_PRIORITY_LOW = 1;
  RECOMMENDATION_PRIORITY_MEDIUM = 2;
  RECOMMENDATION_PRIORITY_HIGH = 3;
  RECOMMENDATION_PRIORITY_CRITICAL = 4;
}

// Recommendation status
enum RecommendationStatus {
  RECOMMENDATION_STATUS_UNSPECIFIED = 0;
  RECOMMENDATION_STATUS_PENDING = 1;
  RECOMMENDATION_STATUS_APPROVED = 2;
  RECOMMENDATION_STATUS_APPLIED = 3;
  RECOMMENDATION_STATUS_DISMISSED = 4;
  RECOMMENDATION_STATUS_FAILED = 5;
  RECOMMENDATION_STATUS_EXPIRED = 6;
}

// Optimization recommendation
message Recommendation {
  bytes id = 1;
  ResourceIdentifier resource = 2;
  RecommendationType type = 3;
  RecommendationPriority priority = 4;
  RecommendationStatus status = 5;
  string title = 6;
  string description = 7;
  Money estimated_monthly_savings = 8;
  double confidence_score = 9; // 0.0 - 1.0
  repeated RecommendationAction actions = 10;
  RecommendationImpact impact = 11;
  int64 created_at = 12;
  int64 updated_at = 13;
  optional int64 expires_at = 14;
  map<string, string> metadata = 15;
}

// Action to implement recommendation
message RecommendationAction {
  int32 order = 1;
  string action_type = 2; // e.g., "resize", "terminate", "purchase"
  string description = 3;
  map<string, string> parameters = 4;
  bool reversible = 5;
}

// Impact assessment
message RecommendationImpact {
  ImpactLevel performance_impact = 1;
  ImpactLevel availability_impact = 2;
  ImpactLevel security_impact = 3;
  string risk_summary = 4;
}

enum ImpactLevel {
  IMPACT_LEVEL_UNSPECIFIED = 0;
  IMPACT_LEVEL_NONE = 1;
  IMPACT_LEVEL_LOW = 2;
  IMPACT_LEVEL_MEDIUM = 3;
  IMPACT_LEVEL_HIGH = 4;
}

// Current resource details for recommendation context
message CurrentResourceDetails {
  string instance_type = 1;
  int32 vcpus = 2;
  int32 memory_gb = 3;
  double avg_cpu_utilization = 4;
  double avg_memory_utilization = 5;
  Money current_monthly_cost = 6;
}

// Suggested resource details
message SuggestedResourceDetails {
  string instance_type = 1;
  int32 vcpus = 2;
  int32 memory_gb = 3;
  Money projected_monthly_cost = 4;
  optional CloudProvider suggested_provider = 5; // For cross-cloud recommendations
}

// Get recommendations request
message GetRecommendationsRequest {
  optional CloudProvider provider = 1;
  repeated ResourceType resource_types = 2;
  repeated RecommendationType recommendation_types = 3;
  optional RecommendationPriority min_priority = 4;
  optional RecommendationStatus status = 5;
  optional Money min_savings = 6;
  Pagination pagination = 7;
}

message GetRecommendationsResponse {
  repeated Recommendation recommendations = 1;
  int32 total_count = 2;
  Money total_potential_savings = 3;
}

// Get single recommendation
message GetRecommendationRequest {
  bytes id = 1;
}

message GetRecommendationResponse {
  Recommendation recommendation = 1;
  CurrentResourceDetails current_details = 2;
  SuggestedResourceDetails suggested_details = 3;
}

// Apply recommendation
message ApplyRecommendationRequest {
  bytes id = 1;
  bool dry_run = 2; // Simulate without applying
  optional string approval_note = 3;
}

message ApplyRecommendationResponse {
  bool success = 1;
  optional string error_message = 2;
  Recommendation recommendation = 3;
  optional string execution_log = 4;
}

// Dismiss recommendation
message DismissRecommendationRequest {
  bytes id = 1;
  string reason = 2;
  optional int64 snooze_until = 3; // Optionally snooze until date
}

message DismissRecommendationResponse {
  Recommendation recommendation = 1;
}

// Get savings summary
message GetSavingsSummaryRequest {
  optional CloudProvider provider = 1;
  TimeRange time_range = 2;
}

message GetSavingsSummaryResponse {
  Money total_potential_savings = 1;
  Money realized_savings = 2;
  int32 total_recommendations = 3;
  int32 applied_recommendations = 4;
  repeated SavingsByType savings_by_type = 5;
  repeated SavingsByProvider savings_by_provider = 6;
}

message SavingsByType {
  RecommendationType type = 1;
  Money potential_savings = 2;
  Money realized_savings = 3;
  int32 recommendation_count = 4;
}

message SavingsByProvider {
  CloudProvider provider = 1;
  Money potential_savings = 2;
  Money realized_savings = 3;
  int32 recommendation_count = 4;
}

// Analyze resources request
message AnalyzeResourcesRequest {
  repeated ResourceIdentifier resources = 1;
  repeated RecommendationType analysis_types = 2; // Empty = all types
}

message AnalyzeResourcesResponse {
  repeated Recommendation recommendations = 1;
  int64 analysis_duration_ms = 2;
}
